--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>
-       Hi I am "your names" 
+       Hi I am "Bhupendra Bhati" 
+       Thank You So Much "Geeta Mam".
     </h1>
 </body>
 </html>
