--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>
        Hi I am "Bhupendra Bhati" 
-       Thank You So Much "Geeta Mam".
+       Thank You So Much "Geeta Mam". It was greatful to learn from you.
     </h1>
 </body>
 </html>
