Pushing to Github

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>
-       Hi I am "your names" 
+       Hi I am "Bhupendra Bhati"
+       I am learning "Cloud Technology"
+       Thank You "Geeta Mam for the Git Lectures." 
     </h1>
 </body>
 </html>
